2017-03-08  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/ismember.m: Fix a bug

	* arrays/@stk_dataframe/ismember.m: Handle the case where A is an
	stk_dataframe object and B is an stk_hrect object (or any
	specialized stk_dataframe object that implements ismember).

	stk_plot_histnormres.m: Ignore infinite normalized residuals

	* misc/plot/stk_plot_histnormres.m: Ignore infinite normalized
	residuals, with a warning.

2017-02-21  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_phipcrit.m: Fix a typo in the help text

	* misc/design/stk_phipcrit.m: Fix a typo in the help text.

2017-02-10  Julien Bect  <julien.bect@centralesupelec.fr>

	Use fminsearch for box-constrained problems as last recourse

	* misc/optim/@stk_optim_fminsearch/stk_minimize_boxconstrained.m:
	New function, which allows to use fminsearch for box-constrained
	problems, a as last recourse for Matlab users that have neither
	the Optimization toolbox nor MOSEK.
	* admin/octpkg/INDEX: Add new function to the INDEX.

	sqp_quadprog.m: Restore warning state if quadprog fails

	* misc/optim/@stk_optim_octavesqp/private/sqp_quadprog.m: Restore
	warning state if quadprog fails.

	Provide better tools to check for optimizer availability (ticket #64)

	* misc/optim/@stk_optim_baseclass: New abstract base class for all
	optimizer object classes.
	* misc/optim/@stk_optim_baseclass/stk_optim_baseclass.m: New
	function, constructor of the new base class.
	* misc/optim/@stk_optim_baseclass/isequal.m: Overload isequal
	Octave 3.2.x compatibility, see CODING_GUIDELINES.
	* misc/optim/@stk_optim_fmincon/stk_optim_fmincon.m: Derive from
	the new class.
	* misc/optim/@stk_optim_fminsearch/stk_optim_fminsearch.m: Idem.
	* misc/optim/@stk_optim_octavesqp/stk_optim_octavesqp.m: Itou.
	* misc/optim/stk_optim_isavailable.m: New function, which tests if
	a given optimization algorithm is available.
	* misc/optim/@stk_optim_baseclass/stk_optim_isavailable.m: